# llm-and-ai-agents-in-cybersecurity-kompotkot

./: .cursorignore  .env.sample  .gitignore  README.md  filtered_fields.txt  grade.json  pyproject.toml
docs/: workflows.md
src/: api.py  config.py  data.py  main.py  orchestration.py  prompt.py
src/agents/: __init__.py  correlations.py  normalization.py
