[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pt-llm-course-kompotkot"
version = "0.0.1"
description = "LLM and AI agents in cybersecurity solution by kompotkot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "langfuse>=3.11.1",
    "langgraph>=1.0.5",
    "numpy>=2.3.4",
    "pydantic>=2.12.4",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "tqdm>=4.67.1",
]

[project.scripts]
main = "src.main:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
]
ipynb = [
    "ipykernel>=7.1.0",
]
